rename classes and impl stats